--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -136,32 +136,32 @@
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
                 <div class="row flex-wrap">
                     <div class="col-md-3">
-                        <img src="images/gallery/IMG_6197-25-04-18-11-42.jpg" alt="">
-                        <img src="images/gallery/IMG_6217-25-04-18-11-41.jpg" alt="">
-                        <img src="images/gallery/IMG_6240-26-04-18-12-23.jpg" alt="">
-                        <img src="images/gallery/IMG_9285.jpg" alt="">
-                        <img src="images/gallery/IMG_9934.JPG" alt="">
+                        <img src="images/gallery/photo1.jpg" alt="">
+                        <img src="images/gallery/photo2.jpg" alt="">
+                        <img src="images/gallery/photo3.jpg" alt="">
+                        <img src="images/gallery/photo4.jpg" alt="">
+                        <img src="images/gallery/photo5.JPG" alt="">
                     </div>
                     <div class="col-md-3">
-                        <img src="images/gallery/OVDP4767.JPG" alt="">
-                        <img src="images/gallery/Аққу.jpg" alt="">
-                        <img src="images/gallery/Женимпаздар1.JPG" alt="">
-                        <img src="images/gallery/жода жүру ережесі.jpg" alt="">
-                        <img src="images/gallery/топ1.jpg" alt="">
+                        <img src="images/gallery/photo6.JPG" alt="">
+                        <img src="images/gallery/photo7.jpg" alt="">
+                        <img src="images/gallery/photo8.JPG" alt="">
+                        <img src="images/gallery/photo9.jpg" alt="">
+                        <img src="images/gallery/photo10.jpg" alt="">
                     </div>
                     <div class="col-md-3">
-                        <img src="images/gallery/DSC_0231.JPG" alt="">
-                        <img src="images/gallery/DSC_0248.JPG" alt="">
-                        <img src="images/gallery/DSC_0250.JPG" alt="">
-                        <img src="images/gallery/DSC_0257.JPG" alt="">
-                        <img src="images/gallery/DSC_1068.JPG" alt="">
+                        <img src="images/gallery/photo11.JPG" alt="">
+                        <img src="images/gallery/photo12.JPG" alt="">
+                        <img src="images/gallery/photo13.JPG" alt="">
+                        <img src="images/gallery/photo14.JPG" alt="">
+                        <img src="images/gallery/photo15.JPG" alt="">
                     </div>
                     <div class="col-md-3">
-                        <img src="images/gallery/DSC_1074.JPG" alt="">
-                        <img src="images/gallery/DSC_1081.JPG" alt="">
-                        <img src="images/gallery/DSC_1084.JPG" alt="">
-                        <img src="images/gallery/DSC_1097.JPG" alt="">
-                        <img src="images/gallery/DSC_1101.JPG" alt="">
+                        <img src="images/gallery/photo16.JPG" alt="">
+                        <img src="images/gallery/photo17.JPG" alt="">
+                        <img src="images/gallery/photo18.JPG" alt="">
+                        <img src="images/gallery/photo19.JPG" alt="">
+                        <img src="images/gallery/photo20.JPG" alt="">
                     </div>
                 </div>
         </section>
