#maripbekoff 13.02.2020 01:20 *Added new blocs in sections and fixed some bugs

--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -379,7 +379,13 @@
     <section id="feedback">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-12">
+                <div class="col-md-6 pt-5">
+                    <!-- <img src="images/kid.png" alt=""> -->
+                    <h3 class="m-0">Свяжитесь с нами</h3><br>
+                    <p class="text-muted">Если у вас есть какие-либо вопросы - пишите, звоните и приходите в гости.</p>
+                    <p class="text-muted">Алматы<br>Мы находимся: ул.Брусиловского 19<br>Телефон: +7 (727) 374‒16‒20</p>
+                </div>
+                <div class="col-md-6">
                     <form id="form" class="w-75 pt-5" method="POST">
                         <div class="form-group">
                             <input type="email" class="form-control" id="form-email" placeholder="Ваша почта...">
@@ -408,10 +414,6 @@
                                 заявку</button>
                         </div>
                     </form>
-
-                </div>
-                <div class="col-lg-6 col-md-12">
-                    <img src="images/kid.png" alt="">
                 </div>
             </div>
         </div>
