--- a/kindergarten/discipline.html
+++ b/kindergarten/discipline.html
@@ -45,7 +45,7 @@
         <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -87,7 +87,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/DSC_6073.jpg" class="card-img" alt="..." height="100%">
+                                <img src="images/gallery/photo21.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -106,7 +106,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/DSC_0248.JPG" class="card-img" alt="..." height="100%">
+                                <img src="images/gallery/photo12.JPG" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -125,8 +125,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/IMG_6197-25-04-18-11-42.jpg" class="card-img" alt="..."
-                                    height="100%">
+                                <img src="images/gallery/photo1.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -143,7 +142,7 @@
                     <div class="card mb-3" style="max-width: 540px;">
                         <div class="row no-gutters">
                             <div class="col-md-4">
-                                <img src="images/gallery/photo5.jpg" class="card-img" alt="..." height="100%">
+                                <img src="images/gallery/photo4.jpg" class="card-img" alt="..." height="100%">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -168,8 +167,9 @@
     <!-- footer end -->
 
     <!-- javascript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script>
         new WOW().init();
