--- a/kindergarten/growth.html
+++ b/kindergarten/growth.html
@@ -45,7 +45,7 @@
         <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -74,12 +74,34 @@
         </div>
     </nav>
     <!-- navbar end -->
-
-    <!-- header start -->
-    <div class="main">
-        <h1>Дополнительные секции</h1>
-    </div>
-    <!-- header end -->
+    
+    <!-- slideshow start -->
+    <section id="gallery">
+        <div class="container-fluid">
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item">
+                        <img src="/images/gallery/photo21.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="/images/gallery/photo12.JPG" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/gallery/photo19.JPG" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- slideshow end -->
 
     <!-- courses start -->
     <section class="courses">
