--- a/kindergarten/mind.html
+++ b/kindergarten/mind.html
@@ -45,7 +45,7 @@
         <img src="images/whatsapp.png" alt="" width="64">
     </a>
     <!-- navbar start -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav id="navbar" class="navbar navbar-expand-xl navbar-light bg-light sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="100"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -79,13 +79,30 @@
         <h1>Наш взгляд</h1>
     </div>
 
+    <section id="mission">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-6 title p-5">
+                    <h3>Миссия нашего садика</h3><br>
+                    <p>Дети - наше будущее!<br><br>Мы хотим:<br>- создать уютную атмосферу вокруг ребёнка<br>- создать
+                        комфортные условия для развития<br>- дать ему достаточно заботы и внимания<br>- занять его
+                        интересными вещями со своими сверстниками.</p>
+                </div>
+                <div class="col-md-6 image"></div>
+            </div>
+        </div>
+    </section>
+
+    <div class="staff">
+        <h2 class="text-center pt-5">наш<br>преподовательский состав</h2>
+    </div>
+
     <section id="mind">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <div class="card border-secondory">
                         <!-- card-header -->
-                        <div class="card-header bg-info text-white"></div>
                         <!-- card-body -->
                         <img src="./images/team/_DSC0007.jpg" alt="" class="card-img-top">
                         <div class="card-body">
@@ -97,7 +114,6 @@
                 <div class="col-md-4">
                     <div class="card border-secondory">
                         <!-- card-header -->
-                        <div class="card-header bg-info text-white"></div>
                         <!-- card-body -->
                         <img src="./images/team/DSC_0264.JPG" alt="" class="card-img-top">
                         <div class="card-body">
@@ -110,7 +126,6 @@
                 <div class="col-md-4">
                     <div class="card border-secondory">
                         <!-- card-header -->
-                        <div class="card-header bg-info text-white"></div>
                         <!-- card-body -->
                         <img src="./images/team/DSC_0225.JPG" alt="" class="card-img-top">
                         <div class="card-body">
@@ -125,8 +140,28 @@
     </section>
 
     <section id="team">
-        <div class="container-fluid">
-            
+        <div class="container">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="/images/gallery/photo22.JPG" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/gallery/photo23.JPG" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/images/gallery/photo24.JPG" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -137,8 +172,9 @@
     <!-- footer end -->
 
     <!-- javascript -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 
     <script>
         new WOW().init();
