--- a/kindergarten/mind.html
+++ b/kindergarten/mind.html
@@ -80,7 +80,7 @@
     </div>
 
     <section id="mission">
-        <div class="container-fluid">
+        <div class="container mt-5">
             <div class="row">
                 <div class="col-md-6 title p-5">
                     <h3>Миссия нашего садика</h3><br>
