--- a/kindergarten/growth.html
+++ b/kindergarten/growth.html
@@ -34,7 +34,7 @@
                 preloaderEl.classList.remove('visible');
                 preloaderEl.style.backgroundImage = "none";
                 window.removeEventListener('scroll', noScroll);
-            }); 
+            });
     </script>
 
 
@@ -81,13 +81,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item">
-                        <img src="/images/gallery/photo21.jpg" class="d-block w-100" alt="...">
+                        <img src="images/gallery/photo21.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item active">
-                        <img src="/images/gallery/photo12.JPG" class="d-block w-100" alt="...">
+                        <img src="images/gallery/photo12.JPG" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="/images/gallery/photo19.JPG" class="d-block w-100" alt="...">
+                        <img src="images/gallery/photo19.JPG" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
