--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -390,8 +390,8 @@
                 проезд до Детский сад №8</a></div>
         <script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script>
         <script
-            charset="utf-8"> new DGWidgestLoader({ "width": "100%", "height": 300, "pos": { "lat": 43.25217347103417, "lon": 76.87550067901611, "zoom": 16 }, "opt": { "city": "almaty" }, "org": [{ "id": "9429940000794906" }] });
-        </script>
+            charset="utf-8">
+            new DGWidgetLoader({ "width": "100%", "height": 300, "pos": { "lat": 43.25217347103417, "lon": 76.87550067901611, "zoom": 16 }, "opt": { "city": "almaty" }, "org": [{ "id": "9429940000794906" }] });</script>
         <noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в
             настройках вашего браузера.</noscript>
     </section>
