#maripbekoff 17.02.2020 02:52 *Redesigned growth, index, learning and mind pages

--- a/kindergarten/growth.html
+++ b/kindergarten/growth.html
@@ -103,19 +103,79 @@
     </section>
     <!-- slideshow end -->
 
-    <div class="container courses">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="images/gallery/photo11.JPG" alt="">
-            </div>
-            <div class="col-md-6">
-                <h2>Курсы Английского</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem nisi fugiat maiores cumque ut
-                    quisquam inventore totam, illo obcaecati consequatur.</p>
+    <section class="container-fluid courses fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
+        <div class="container">
+            <h3 class="text-center">Дополнительные кружки</h3>
+            <div class="row pt-5">
+                <div class="col-lg-6 pb-5">
+                    <div class="row no-gutters rounded overflow-hidden position-relative">
+                        <div class="col-auto">
+                            <img src="images/numbers/1.png" alt="" width="100px">
+                        </div>
+                        <div class="col pl-3">
+                            <h5>Английский</h5>
+                            <p class="muted">
+                                Дети учаться читать, писать и говорить. В свободное время, дети играют на свежем
+                                воздухе.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row no-gutters rounded overflow-hidden position-relative">
+                        <div class="col-auto">
+                            <img src="images/numbers/2.png" alt="" width="100px">
+                        </div>
+                        <div class="col pl-3">
+                            <h5>Хореография</h5>
+                            <p class="muted">
+                                Дети учаться читать, писать и говорить. В свободное время, дети играют на свежем
+                                воздухе.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
+    <h3 class="text-center">Чему научиться ваш ребёнок</h3>
+
+    <section class="pb-5">
+        <div class="container">
+            <div class="row wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
+                <div class="col-md-6">
+                    <img src="images/dance illustration.png" width="100%" alt="Детский сад">
+                </div>
+                <div class="col-md-6">
+                    <ul class="nav nav-pills m-3 justify-content-center" id="pills-tab" role="tablist p-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home"
+                                role="tab" aria-controls="pills-home" aria-selected="true">Английский</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile"
+                                role="tab" aria-controls="pills-profile" aria-selected="false">Хореография</a>
+                        </li>
+                    </ul>
+                    <h3 style="text-transform: none;"></h3>
+                    <div class="tab-content" id="pills-tabContent">
+                        <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
+                            aria-labelledby="pills-home-tab">
+                            Развитие уже в раннем возрасте речи, чтения и умение писать на английском. Обучение
+                            элементарным и базовым знанием в английском заложит не только хорошую память, но и крепкий
+                            фундамент для изучения других языков в будущем.
+                        </div>
+                        <div class="tab-pane fade" id="pills-profile" role="tabpanel"
+                            aria-labelledby="pills-profile-tab">
+                            Чтобы ребёнок не был скованным и был всегда в хорошем настроении и активный, необходимо
+                            поддерживать его тонусе. Для этого хорошо подходят танцы.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- footer start -->
     <footer class="text-center">
