--- a/kindergarten/learning.html
+++ b/kindergarten/learning.html
@@ -80,27 +80,12 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">08:00 - 8:45</p>
+                <p class="timeline-event-thumbnail">08:00 - 9:00</p>
                 <h3>Прием детей</h3>
                 <h4>Мы работаем с 8 часов утра</h4>
                 <p>
-                    Раньше приходят наши повара и помощники воспитателя. До прихода детей
-                    проводят влажную уборку помещений, кварцевание, проветривание групп, приготовление завтрака,
-                    принимает детей медицинская сестра и воспитатель. Медицинская сестра проводит утренний фильтр:
-                    осматривает детей, в сезон вирусных заболеваний, обрабатывает носик оксалиновой мазью, дает
-                    аскорбинку, в течение дня используется "чесночные бусы", масло пихты, проводится повторный осмотр,
-                    кварцевание групп.
-                </p>
-            </div>
-        </li>
-        <li class="timeline-event">
-            <label class="timeline-event-icon"></label>
-            <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">08:45 - 09:00</p>
-                <h3>Утренняя зарядка</h3>
-                <h4>На свежем воздухе</h4>
-                <p>
-                    Проводится одним воспитателем, в летнее время - на улице, под музыкальное сопровождение. На зарядке
+                    Утренняя разминка проводится одним воспитателем, в летнее время - на улице, под музыкальное
+                    сопровождение. На зарядке
                     дети играют в спортивные игры с различными спорт снаряжениями.
                 </p>
             </div>
@@ -108,7 +93,7 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">09:00 - 09:20</p>
+                <p class="timeline-event-thumbnail">09:00 - 09:30</p>
                 <h3>Завтрак</h3>
                 <p>
                     В нашем дестком саду используется только высококачественные натуральные продукты имеющие сертификат
@@ -121,7 +106,7 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">09:20 - 11:00</p>
+                <p class="timeline-event-thumbnail">09:30 - 10:10</p>
                 <h3>Занятия</h3>
                 <h4>по расписанию</h4>
                 <p>
@@ -132,30 +117,19 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">11:00 - 11:15</p>
-                <h3>Витаминный завтрак</h3>
-                <p>
-                    Прием свежих фруктов, соков.
-                </p>
-            </div>
-        </li>
-        <li class="timeline-event">
-            <label class="timeline-event-icon"></label>
-            <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">11:15 - 12:45</p>
+                <p class="timeline-event-thumbnail">10:10 - 11:50</p>
                 <h3>Прогулка</h3>
                 <h4>На свежем воздухе</h4>
                 <p>
                     Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
-                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром. Во время прогулки
-                    детей, мед . сестра проводит проветривание комнат всех групп.
+                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром.
                 </p>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">12:45 - 13:30</p>
+                <p class="timeline-event-thumbnail">11:50 - 12:30</p>
                 <h3>Обед</h3>
                 <p>
                     Соответствует утвержденному меню на день. Родители могут заранее договориться с воспитателем о
@@ -166,7 +140,7 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">13:30 - 15:30</p>
+                <p class="timeline-event-thumbnail">12:30 - 15:00</p>
                 <h3>Здоровый сон</h3>
                 <p>
                     В каждой спальне и группе поддерживается комфортная для организма ребенка температура. Постель,
@@ -178,18 +152,19 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">15:30 - 16:00</p>
+                <p class="timeline-event-thumbnail">15:00 - 15:30</p>
                 <h3>Процедуры</h3>
+                <h4>по очищению</h4>
                 <p>
-                    Воздушные ванны, дорожки здоровья, соляная дорожка. В летнее время года: бассеин, хождение босиком,
-                    солнечные ванны.
+                    Дети постепенно просыпаются, после чего проводятся воздушные, ванные процедуры и проветривование
+                    комнат.
                 </p>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">16:00 - 16:10</p>
+                <p class="timeline-event-thumbnail">15:30 - 16:00</p>
                 <h3>Полдник</h3>
                 <p>
                     По меню на день.
@@ -199,20 +174,28 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">16:10 - 17:00</p>
+                <p class="timeline-event-thumbnail">16:00 - 16:20</p>
                 <h3>Занятия</h3>
                 <h4>Творчество, подвижные игры, танцы</h4>
+            </div>
+        </li>
+        <li class="timeline-event">
+            <label class="timeline-event-icon"></label>
+            <div class="timeline-event-copy">
+                <p class="timeline-event-thumbnail">16:20 - 17:40</p>
+                <h3>Прогулка</h3>
+                <h4>На свежем воздухе</h4>
                 <p>
-
+                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
+                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром.
                 </p>
             </div>
         </li>
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">17:00 - 17:30</p>
+                <p class="timeline-event-thumbnail">17:40 - 18:00</p>
                 <h3>Ужин</h3>
-                <h4>На свежем воздухе</h4>
                 <p>
                     Соответствует утвержденному меню на день. После ужина - прогулка, а так же посещение доп. спортивных
                     секций по желанию.
@@ -222,21 +205,8 @@
         <li class="timeline-event">
             <label class="timeline-event-icon"></label>
             <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">17:30 - 17:55</p>
-                <h3>Прогулка</h3>
-                <h4>На свежем воздухе</h4>
-                <p>
-                    Дети гуляют в любое время года, на прогулке воспитатели проводят занимательные игры, а так же часто
-                    и некоторые занятия: творчество, развитие речи, ознакомления с окружающим миром. Во время прогулки
-                    детей, мед . сестра проводит проветривание комнат всех групп.
-                </p>
-            </div>
-        </li>
-        <li class="timeline-event">
-            <label class="timeline-event-icon"></label>
-            <div class="timeline-event-copy">
-                <p class="timeline-event-thumbnail">18:00 - 19:00</p>
-                <h3>Дежурная группа</h3>
+                <p class="timeline-event-thumbnail">18:00 - 18:30</p>
+                <h3>Обратно домой</h3>
             </div>
         </li>
     </ul>
