--- a/kindergarten/index.html
+++ b/kindergarten/index.html
@@ -130,7 +130,7 @@
         <!-- services end -->
 
         <!-- gallery start -->
-        <section class="gallery p-5">
+        <section class=" gallery p-5">
             <div class="container">
                 <h2>Наша галерея счастья</h2>
                 <p>Здесь вы можете увидеть, <br>как дети улыбаются</p>
@@ -181,7 +181,7 @@
                     </a>
                     <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Следущщ</span>
+                        <span class="sr-only">Следущий</span>
                     </a>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
                             С нами ребёнок будет чувствовать себя в безопасности. Будет окружен уютом и дружелюбием
-                            других детей.Ключ к успеху и счастья вашего ребенка лежит в нашем Детском саду.
+                            других детей. Ключ к успеху и счастья вашего ребенка лежит в нашем Детском саду.
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
@@ -223,6 +223,7 @@
                     </a>
                 </div>
             </div>
+        </div>
     </section>
     <!-- about end -->
 
